# docs/swagger.yaml
@@ -316,6 +316,10 @@ paths:
           description: Unprocessable Entity - Invalid payload validation
           schema:
             $ref: '#/definitions/response.ApiResponse'
+        "429":
+          description: Too Many Requests - Rate limit exceeded
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
         "500":
           description: Internal server error
           schema:
@@ -388,6 +392,10 @@ paths:
           description: Unprocessable Entity - Invalid payload validation
           schema:
             $ref: '#/definitions/response.ApiResponse'
+        "429":
+          description: Too Many Requests - Rate limit exceeded
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
         "500":
           description: Internal server error
           schema:
@@ -426,6 +434,10 @@ paths:
             $ref: '#/definitions/response.ApiResponse'
         "422":
           description: Unprocessable Entity - Invalid payload validation
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
+        "429":
+          description: Too Many Requests - Rate limit exceeded
           schema:
             $ref: '#/definitions/response.ApiResponse'
         "500":
